# ZenEngine

./: .gitmodules  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxGame.cpp
ZenEngine/: CMakeLists.txt
ZenEngine/include/: ZenEngine.h
ZenEngine/resources/Icons/: Illustration2.clip
ZenEngine/resources/Meshes/: BoxStack.mtl
ZenEngine/resources/Shaders/: BlitAlpha.hlsl  BlitDepth.hlsl  BlitRGB.hlsl  BlitWorldPosition.hlsl  DeferredShading.hlsl  FlatColor.hlsl  Magenta.hlsl  ZenShaderLib.hlsl  ZenShaders.hlsl
ZenEngine/src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
ZenEngine/src/Platform/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGLFWRenderContext.cpp  OpenGLGLFWRenderContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
ZenEngine/src/ZenEngine/Asset/: Asset.h  AssetInstance.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetType.h  Serialization.h  ShaderAsset.cpp  ShaderAsset.h  StaticMesh.cpp  StaticMesh.h  Texture2DAsset.cpp  Texture2DAsset.h  URL.cpp  URL.h  UUID.cpp  UUID.h
ZenEngine/src/ZenEngine/Core/: EntryPoint.h  Filesystem.cpp  Filesystem.h  Game.cpp  Game.h  Input.cpp  Input.h  KeyCode.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Macros.h  Math.cpp  Math.h  MouseCode.h  Platform.h  Result.h  Time.cpp  Time.h  Window.cpp  Window.h
ZenEngine/src/ZenEngine/ECS/: CoreComponents.cpp  CoreComponents.h  CoreSystems.cpp  CoreSystems.h  Entity.cpp  Entity.h  Level.cpp  Level.h  Scene.cpp  Scene.h  System.h
ZenEngine/src/ZenEngine/Editor/: AssetBrowser.cpp  AssetBrowser.h  AssetEditor.h  AssetManagerDatabase.cpp  AssetManagerDatabase.h  AssetManagerInfo.cpp  AssetManagerInfo.h  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorGUI.cpp  EditorGUI.h  EditorViewport.cpp  EditorViewport.h  EditorWindow.h  FileDialog.cpp  FileDialog.h  ImGuiBuild.cpp  MeshEditor.cpp  MeshEditor.h  PropertiesWindow.cpp  PropertiesWindow.h  SceneHierarchy.cpp  SceneHierarchy.h  Texture2DEditor.cpp  Texture2DEditor.h
ZenEngine/src/ZenEngine/Event/: Event.h  EventBus.cpp  EventBus.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
ZenEngine/src/ZenEngine/Renderer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
ZenEngine/src/ZenEngine/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderIncluder.cpp  ShaderIncluder.h  ShaderReflector.cpp  ShaderReflector.h
ZenScript/: CHANGELOG.md  README.md  ZenScript.cabal
ZenScript/app/: Compiler.hs  Main.hs  Parser.hs  String.hs
